fixed alignment and margins

--- a/themes/mumata/assets/css/theme.css
+++ b/themes/mumata/assets/css/theme.css
@@ -2,7 +2,10 @@
 body {
     margin-top: 84px;
     max-width: 720px;
-    margin-left: 128px;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h1 small{
